// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label accepts props 1`] = `
<label
  className="label-class test sc-bdVaJa dYtKJN"
  htmlFor="htmlFor"
  id="labelId"
>
  Test Input
</label>
`;

exports[`Label adds asterisk if required 1`] = `
<label
  className="sc-bdVaJa dYtKJN"
>
  Required Field
  <span
    className="sc-bwzfXH hcmPLH"
  >
    *
  </span>
</label>
`;

exports[`Label does not render without child 1`] = `null`;

exports[`Label renders with child 1`] = `
<label
  className="sc-bdVaJa dYtKJN"
>
  Test Label
</label>
`;
